# fun-translation-api-python-wrapper

./: .readthedocs.yaml  README.md  complete_guide.ipynb  funtranslation.readthedocs.yaml  pyproject.toml  quick_guide.ipynb
docs/: Makefile
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/python_funtranslation/: index.doctree
docs/_build/doctrees/autoapi/python_funtranslation/python_funtranslation/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/python_funtranslation/: python_funtranslation.html
docs/_build/html/_sources/: example.ipynb.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/python_funtranslation/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/python_funtranslation/: index.html
docs/_build/html/autoapi/python_funtranslation/python_funtranslation/: index.html
docs/_build/jupyter_execute/: example.ipynb
python_funtranslation/: CHANGELOG.md  CONTRIBUTING.md  pyproject.toml
python_funtranslation/docs/: conf.py  make.bat
python_funtranslation/tests/: test_python_funtranslation.py
src/python_funtranslation/: __init__.py
tests/: test_python_funtranslation.py
(+1 files in other folders)
