[tool.poetry]
name = "python_funtranslation"
version = "0.1.0"
description = "A Python wrapper around the Fun Translation API."
authors = ["Yishu Zhang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^1.4.2"
lxml = "^4.9.0"
urllib3 =  "^2.1.0"
seaborn = "^0.13.0"
matplotlib = "^3.1.3"
scikit-learn = "^1.3.1"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
